Update azure-pipelines-4.yml for Azure Pipelines

--- a/azure-pipelines-4.yml
+++ b/azure-pipelines-4.yml
@@ -3,16 +3,11 @@ trigger:
 
 schedules:
 - cron: '*/5 * * * *'
-  displayName: 'Run every 5 minutes'
-  branches:
-    - main
-
-pool:
-  vmImage: 'windows-latest'
 
 jobs:
-- job: RunDbtModels
-  displayName: 'Run dbt Models'
+- job: run-dbt
+  pool:
+    vmImage: 'windows-latest'
   steps:
   - checkout: self
 
