--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,14 +4,14 @@ trigger:
 schedules:
 - cron: '*/5 * * * *'
   branches:
+    include:
     - main
-
-pool:
-  vmImage: 'windows-latest'
 
 jobs:
 - job: RunDbtModels
-  displayName: 'Run dbt Models'
+  pool:
+    vmImage: 'ubuntu-latest'
+  
   steps:
   - checkout: self
 
@@ -27,13 +27,13 @@ jobs:
     displayName: 'Install dbt and dependencies'
 
   - script: |
-      dbt deps --profiles-dir $(Build.SourcesDirectory)\dfz --project-dir $(Build.SourcesDirectory)\dfz
+      dbt deps --profiles-dir $(Build.Repository.LocalPath)/dfz --project-dir $(Build.Repository.LocalPath)/dfz
     displayName: 'Install dbt dependencies'
 
   - script: |
-      dbt run --profiles-dir $(Build.SourcesDirectory)\dfz --project-dir $(Build.SourcesDirectory)\dfz
+      dbt run --profiles-dir $(Build.Repository.LocalPath)/dfz --project-dir $(Build.Repository.LocalPath)/dfz
     displayName: 'Run dbt models'
 
   - script: |
-      dbt test --profiles-dir $(Build.SourcesDirectory)\dfz --project-dir $(Build.SourcesDirectory)\dfz
+      dbt test --profiles-dir $(Build.Repository.LocalPath)/dfz --project-dir $(Build.Repository.LocalPath)/dfz
     displayName: 'Run dbt tests'
