--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -3,50 +3,25 @@ name: Run dbt Models
 on:
   schedule:
     - cron: '*/5 * * * *'
-  push:
-    branches:
-      - main
   
 jobs:
   run-dbt:
     runs-on: windows-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-        with:
-          repository: datafactz123/repo
+      - checkout: self
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-      - name: Install dbt and dependencies
-        run: |
+      - task: UsePythonVersion@0
+        inputs:
+          versionSpec: '3.x'
+          addToPath: true
+
+      - script: |
           python -m pip install --upgrade pip
           pip install dbt
           pip install dbt-snowflake
-          
-      - name: Install dbt dependencies
-        run: dbt deps --profiles-dir ${{ github.workspace }}\dfz --project-dir ${{ github.workspace }}\dfz
-          
-      - name: Run dbt models
-        run: |
-          dbt run --profiles-dir ${{ github.workspace }}\dfz --project-dir ${{ github.workspace }}\dfz
-      - name: Run dbt tests
-        run: |
-          dbt test --profiles-dir ${{ github.workspace }}\dfz --project-dir ${{ github.workspace }}\dfz
-          
-  trigger-azure-devops:
-    runs-on: ubuntu-latest
-    needs: run-dbt
-    steps:
-      - name: Trigger Azure DevOps Pipeline
-        uses: Azure/devops-rest-api@v1
-        with:
-         connection: azure-devops
-         azure-devops-pat: ${{ secrets.AZURE_DEVOPS_TOKEN }}
-         azure-devops-project-url: 'https://dev.azure.com/karthikgundu'
-         az-devops-project: 'dbt_azdevops'
-         azure-devops-pipeline-id: '47'
-         az-devops-branch: 'main'
+      - script: dbt deps --profiles-dir $(Build.Repository.LocalPath)\dfz --project-dir $(Build.Repository.LocalPath)\dfz
+
+      - script: dbt run --profiles-dir $(Build.Repository.LocalPath)\dfz --project-dir $(Build.Repository.LocalPath)\dfz
+
+      - script: dbt test --profiles-dir $(Build.Repository.LocalPath)\dfz --project-dir $(Build.Repository.LocalPath)\dfz
