--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,7 @@
 #YAML Script for DBT:
 
 schedules:
-- cron: '*/10 * * * *'
+- cron: '* 10 * * * *'
   displayName: "Every 5 minutes"
   branches:
     include:
