--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,6 @@
 
 schedules:
 - cron: '*/5 * * * *'
-  displayName: "Every 5 minutes"
   branches:
     include:
     - main
@@ -15,9 +14,19 @@ jobs:
   steps:
   - checkout: self
 
+  - task: UsePythonVersion@0
+    inputs:
+      versionSpec: '3.x'
+      addToPath: true
 
   - script: |
-      dbt deps --profiles-dir $(Build.Repositorhggy.LocalPath)/dfz --project-dir $(Build.Reposjhjitory.LocalPath)/dfz
+      python -m pip install --upgrade pip
+      pip install dbt
+      pip install dbt-snowflake
+    displayName: 'Install dbt and dependencies'
+
+  - script: |
+      dbt deps --profiles-dir $(Build.Repository.LocalPath)/dfz --project-dir $(Build.Repository.LocalPath)/dfz
     displayName: 'Install dbt dependencies'
 
   - script: |
