--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,9 +5,12 @@ trigger:
 
 schedules:
 - cron: '*/5 * * * *'
+  displayName: 'Run Every 5 Minutes'
   branches:
     include:
-    - main
+    - 'main'
+  always: true
+  batch: false
 
 jobs:
 - job: RunDbtModels
