--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,6 @@
 #YAML Script for DBT:
 
-#trigger:
+trigger:
 - none
 
 schedules:
@@ -15,7 +15,7 @@ schedules:
 jobs:
 - job: RunDbtModels
   pool:
-    vmImage: 'ubuntu-latest'
+    vmImage: 'windows-latest'
   
   steps:
   - checkout: self
@@ -25,8 +25,10 @@ jobs:
       versionSpec: '3.x'
       addToPath: true
 
-  - script: |
-      python -m pip install --upgrade pip
+ - powershell: |
+      New-Item -ItemType Directory -Force -Path C:\dbt  # Create a directory for dbt
+      Invoke-WebRequest -Uri https://bootstrap.pypa.io/get-pip.py -OutFile C:\dbt\get-pip.py
+      python C:\dbt\get-pip.py  # Install pip
       pip install dbt
       pip install dbt-snowflake
     displayName: 'Install dbt and dependencies'
