--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,15 +25,24 @@ jobs:
       versionSpec: '3.x'
       addToPath: true
 
- - powershell: |
-    Write-Host "Installing dbt and dependencies..."
-    New-Item -ItemType Directory -Force -Path C:\dbt
-    Invoke-WebRequest -Uri https://bootstrap.pypa.io/get-pip.py -OutFile C:\dbt\get-pip.py
-    python C:\dbt\get-pip.py
-    pip install dbt
-    pip install dbt-snowflake
-    Write-Host "Installation completed."
-  displayName: 'Install dbt and dependencies'
+ powershell: |
+      # Create a directory for dbt
+      New-Item -ItemType Directory -Force -Path C:\dbt
+
+      # Install pip
+      Invoke-WebRequest -Uri https://bootstrap.pypa.io/get-pip.py -OutFile C:\dbt\get-pip.py
+      python C:\dbt\get-pip.py
+
+      # Upgrade pip and setuptools
+      python -m pip install --upgrade pip
+      pip install --upgrade setuptools
+    displayName: 'Install pip and upgrade setuptools'
+
+  - script: |
+      # Install dbt and dependencies
+      pip install dbt
+      pip install dbt-snowflake
+    displayName: 'Install dbt and dependencies'
 
   - script: |
       dbt deps --profiles-dir $(Build.Repository.LocalPath)/dfz --project-dir $(Build.Repository.LocalPath)/dfz
