--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ jobs:
       versionSpec: '3.x'
       addToPath: true
 
-  - script: |
+ - powershell: |
       # Create a directory for dbt
       New-Item -ItemType Directory -Force -Path C:\dbt
 
@@ -38,11 +38,18 @@ jobs:
       pip install --upgrade setuptools
     displayName: 'Install pip and upgrade setuptools'
 
-  - script: |
+  - powershell: |
       # Install dbt and dependencies
       pip install dbt
       pip install dbt-snowflake
     displayName: 'Install dbt and dependencies'
+
+  - powershell: |
+      # Install additional dependencies for snowflake-connector-python
+      pip install pyopenssl ndg-httpsclient pyasn1
+      # Install snowflake-connector-python with pre-built wheel
+      pip install snowflake-connector-python --only-binary :all:
+    displayName: 'Install snowflake-connector-python and dependencies'
 
   - script: |
       dbt deps --profiles-dir $(Build.Repository.LocalPath)/dfz --project-dir $(Build.Repository.LocalPath)/dfz
